--- a/src/assets/stylesheets/EducationLandingPage.scss
+++ b/src/assets/stylesheets/EducationLandingPage.scss
@@ -24,6 +24,7 @@
   background-color: var(--editor-color-layer-1);
   border-radius: 10px;
   // border: 1px solid var(--editor-color-border);
+  // it's not pulling in Design System border color
   border: 1px solid pink;
   display: flex;
   flex-direction: column;
