--- a/src/assets/stylesheets/TextImage.scss
+++ b/src/assets/stylesheets/TextImage.scss
@@ -32,20 +32,25 @@
 }
 
 .text-image-slice__image {
-  background-color: $rpf-grey-300;
-  border-radius: $space-1-5;
-  display: flex;
+  // background-color: $rpf-grey-300;
+  // border-radius: $space-1-5;
+  // display: flex;
+
+  max-width: 100%;
+  overflow: hidden; 
 
   img {
     aspect-ratio: 3/2;
-    display: block;
-    max-inline-size: 100%;
-    margin: auto;
-    block-size: auto;
+    // display: block;
+    // max-inline-size: 100%;
+    // margin: auto;
+    // block-size: auto;
+    width: 100%; 
+    height: auto; 
   }
 
   @media screen and (min-width: 768px) {
-    margin-inline-start: auto;
+    // margin-inline-start: auto;
 
     // img {
     //   inline-size: unset;
