--- a/src/assets/stylesheets/EducationLandingPage.scss
+++ b/src/assets/stylesheets/EducationLandingPage.scss
@@ -13,11 +13,23 @@
   flex: 1 0 0;
   align-self: stretch;
   background-color: var(--editor-color-layer-3);
+  padding-block-end: 4rem;
 
   @media screen and (min-width: 768px) {
     // padding: $space-5 $space-7-5;
     gap: $space-4;
   }
+
+  // .logo-lm-wrapper {
+  //   display: block;
+  //   padding: $space-1-5;
+  //   // justify-content: flex-start;
+
+  //   @media screen and (min-width: 768px) {
+  //     padding: $space-2 $space-3;
+
+  //   }
+  // }
 }
 
 .education-landing-page__get-started {
@@ -25,11 +37,11 @@
   border-radius: 10px;
   // border: 1px solid var(--editor-color-border);
   // it's not pulling in Design System border color
-  border: 1px solid pink;
+  border: 1px solid $rpf-grey-150;
   display: flex;
   flex-direction: column;
   padding: $space-1-5;
   align-items: center;
   gap: $space-1;
-  align-self: stretch;
+  // align-self: stretch;
 }
