--- a/src/assets/stylesheets/EducationLandingPage.scss
+++ b/src/assets/stylesheets/EducationLandingPage.scss
@@ -17,7 +17,7 @@
 
   @media screen and (min-width: 768px) {
     // padding: $space-5 $space-7-5;
-    gap: $space-4;
+    // gap: $space-4;
   }
 
   // .logo-lm-wrapper {
