--- a/src/assets/stylesheets/Hero.scss
+++ b/src/assets/stylesheets/Hero.scss
@@ -6,6 +6,12 @@
 
 .hero__wrapper {
   background-color: var(--editor-color-layer-1);
+    padding: $space-1-5;
+
+    @media screen and (min-width: 768px) {
+
+      padding: $space-2 $space-3;
+    }
 }
 
 .hero {
@@ -13,14 +19,14 @@
   flex-direction: column;
   align-items: center;
   align-self: stretch;
-  padding: $space-1-5;
+  // padding: $space-1-5;
   gap: $space-1;
 
   @media screen and (min-width: 768px) {
     display: flex;
     flex-direction: row;
     gap: $space-2;
-    padding: $space-2 $space-3;
+    // padding: $space-2 $space-3;
   }
 
 }
