--- a/src/assets/stylesheets/EducationLandingPage.scss
+++ b/src/assets/stylesheets/EducationLandingPage.scss
@@ -11,7 +11,6 @@
   flex: 1 0 0;
   align-self: stretch;
   background-color: var(--editor-color-layer-3);
-  padding-block-end: $space-3;
 }
 
 .education-landing-page__get-started {
@@ -23,4 +22,5 @@
   padding: $space-1-5;
   align-items: center;
   gap: $space-1;
+  margin-block: $space-2;
 }
