--- a/src/assets/stylesheets/TextImage.scss
+++ b/src/assets/stylesheets/TextImage.scss
@@ -10,7 +10,8 @@
   max-inline-size: 368px;
   padding: 0 $space-1-5;
 
-  @media screen and (min-width: 768px) {
+
+  @include md-width {    
     display: flex;
     gap: $space-4;
     max-inline-size: 1000px;
@@ -21,9 +22,10 @@
     @include font-size-1-5(regular);
     font-weight: $font-weight-bold;
 
-    @media screen and (min-width: 768px) {
+    @include md-width {    
       @include font-size-2(regular);
     }
+  
   }
 }
 
@@ -43,14 +45,12 @@
     object-fit: cover; 
   }
 
-  @media screen and (min-width: 768px) {
+  @include md-width {    
     img {
       aspect-ratio: 3/2; 
     }
   }
 }
-
-
 
 .text-image-slice--left {
   flex-direction: row;
