--- a/src/assets/stylesheets/MembersPageHeader.scss
+++ b/src/assets/stylesheets/MembersPageHeader.scss
@@ -6,20 +6,34 @@
 
 .members-page-header {
   padding: var(--space-2);
-  gap: $space-1;
   background-color: var(--editor-color-layer-3);
+  gap: var(--space-3);
 
-  @include md-width {    
-    @include font-size-2(regular);
+
+
+  @media screen and (min-width: 600px) {
+    display: flex;
+    flex-direction: row;
   }
+
+  @media screen and (min-width: 1200px) {
+    align-items: center;
+    justify-content: space-between;
+  }
+
+
 }
 
 .members-page-header__title {
-  @include font-size-2(regular);
+  font-size: var(--font-size-3);
 
-  @include md-width {    
-    @include font-size-3(regular);
+  @media screen and (min-width: 600px) {
+    font-size: var(--font-size-4);
   }
+}
+
+.members-page-header__subtitle{
+  font-size: var(--font-size-1-5);
 }
 
 .members-page-header__buttons {
@@ -32,13 +46,18 @@
     flex-direction: row;
   }
 
+
   a {
    inline-size: -webkit-fill-available;
    justify-content: center;
    align-items: center;
 
-    @media screen and (min-width: 600px) {
-      inline-size: fit-content;
-    }
+    // @media screen and (min-width: 600px) {
+    //   inline-size: fit-content;
+    // }
+
+    // @media screen and (min-width: 1200px) {
+    //   inline-size: auto;
+    // }
   }
 }
