--- a/src/assets/stylesheets/MembersPageHeader.scss
+++ b/src/assets/stylesheets/MembersPageHeader.scss
@@ -11,7 +11,7 @@
 
 
 
-  @media screen and (min-width: 600px) {
+  @media screen and (min-width: 1200px) {
     display: flex;
     flex-direction: row;
   }
@@ -27,7 +27,7 @@
 .members-page-header__title {
   font-size: var(--font-size-3);
 
-  @media screen and (min-width: 600px) {
+  @media screen and (min-width: 1200px) {
     font-size: var(--font-size-4);
   }
 }
@@ -42,7 +42,8 @@
   display: flex;
   flex-direction: column;
 
-  @media screen and (min-width: 600px) {
+  @media screen and (min-width: 1200px) {
+    align-items: center;
     flex-direction: row;
   }
 
@@ -52,9 +53,9 @@
    justify-content: center;
    align-items: center;
 
-    // @media screen and (min-width: 600px) {
-    //   inline-size: fit-content;
-    // }
+    @media screen and (min-width: 1200px) {
+      inline-size: fit-content;
+    }
 
     // @media screen and (min-width: 1200px) {
     //   inline-size: auto;
