Fix mixins not importing

--- a/src/assets/stylesheets/TextImage.scss
+++ b/src/assets/stylesheets/TextImage.scss
@@ -1,4 +1,4 @@
-@use "@RaspberryPiFoundation/design-system-core/scss/mixins/typography";
+@use "@RaspberryPiFoundation/design-system-core/scss/mixins/_typography.scss";
 
 .text-image-slice {
   display: flex;
