--- a/src/assets/stylesheets/TextImage.scss
+++ b/src/assets/stylesheets/TextImage.scss
@@ -1,4 +1,5 @@
-@use "@RaspberryPiFoundation/design-system-core/scss/mixins/_typography.scss";
+// @use "@RaspberryPiFoundation/design-system-core/scss/mixins/typography";
+// Should use mixins when updated in the design system
 
 .text-image-slice {
   display: flex;
@@ -18,12 +19,15 @@
 
   h2 {
     margin: 0 0 var(--space-1) 0;
-    @include typography.regular-1-5;
+    // @include typography.regular-1-5;
+    font-size: var(--font-size-1-5);
+    line-height: var(--line-height-1-5);
     font-weight: var(--font-weight-bold);
 
     @media screen and (min-width: 800px) {
-      @include typography.regular-2;
-      font-weight: var(--font-weight-bold);
+      // @include typography.regular-2;
+      font-size: var(--font-size-2);
+      line-height: var(--line-height-2);
     }
   }
 
@@ -69,6 +73,8 @@
 }
 
 .text-image-slice__text--link {
-  @include typography.regular-1-5;
+  // @include typography.regular-1-5;
+  font-size: var(--font-size-1-5);
+  line-height: var(--line-height-1-5);
   font-weight: var(--font-weight-bold);
 }
