--- a/src/assets/stylesheets/FileDropzone.scss
+++ b/src/assets/stylesheets/FileDropzone.scss
@@ -7,10 +7,37 @@
   align-items: center;
   padding: var(--space-2);
   gap: var(--space-1);
+  cursor: pointer;
+}
+
+.file-dropzone:focus-visible {
+  border: 2px solid var(--rpf-text-primary);
+  outline: none;
+  box-shadow: 0px 0px 0px 3px var(--rpf-blue-800);
+}
+
+.file-dropzone--drag-accept {
+  border: 2px solid var(--rpf-text-primary);
+  box-shadow: 0px 0px 0px 3px var(--rpf-blue-800);
+  background-color: var(--rpf-teal-100);
+
+  .file-dropzone__label {
+    color: var(--rpf-grey-300);
+  }
+
+  .file-dropzone__link {
+    color: var(--rpf-teal-400);
+  }
 }
 
 .file-dropzone--success {
   border-style: solid;
+}
+
+.file-dropzone__label {
+  text-align: center;
+  max-width: 115px;
+  cursor: pointer;
 }
 
 .file-dropzone__link, .file-dropzone__remove {
@@ -24,4 +51,13 @@
 
 .file-dropzone__success-text {
   font-weight: var(--font-weight-bold);
+}
+
+.file-dropzone__file {
+  border: 2px solid var(--rpf-grey-150);
+  border-radius: var(--space-1);
+  display: flex;
+  gap: var(--space-0-5);
+  font-weight: var(--font-weight-bold);
+  padding: var(--space-1-5);
 }
