--- a/src/assets/stylesheets/MembersPageHeader.scss
+++ b/src/assets/stylesheets/MembersPageHeader.scss
@@ -9,8 +9,6 @@
   background-color: var(--editor-color-layer-3);
   gap: var(--space-3);
 
-
-
   @media screen and (min-width: 1200px) {
     display: flex;
     flex-direction: row;
@@ -20,25 +18,26 @@
     align-items: center;
     justify-content: space-between;
   }
-
-
 }
 
 .members-page-header__title {
   font-size: var(--font-size-3);
+  line-height: var(--line-height-3);
 
   @media screen and (min-width: 1200px) {
     font-size: var(--font-size-4);
+    line-height: var(--line-height-4);
   }
 }
 
 .members-page-header__subtitle{
   font-size: var(--font-size-1-5);
+  line-height: var(--line-height-1-5);
 }
 
 .members-page-header__buttons {
   @include font-size-1-25(regular);    
-  gap: $space-1;
+  gap: var(--space-2);
   display: flex;
   flex-direction: column;
 
@@ -57,8 +56,5 @@
       inline-size: fit-content;
     }
 
-    // @media screen and (min-width: 1200px) {
-    //   inline-size: auto;
-    // }
   }
 }
