--- a/src/assets/stylesheets/EducationLandingPage.scss
+++ b/src/assets/stylesheets/EducationLandingPage.scss
@@ -48,11 +48,30 @@
 
 .education-landing-page__get-started {
   background-color: var(--editor-color-layer-1);
-  border-radius: $space-1;
-  border: 1px solid $rpf-grey-150;
+  border-radius: var(--space-2);
+  border: 3px solid var(--editor-color-theme);
+  max-width: 600px;
   display: flex;
   flex-direction: column;
-  padding: $space-1-5;
-  align-items: center;
-  gap: $space-1;
+  padding: var(--space-3);
+
+  h2 {
+    margin: 0;
+    margin-block-end: var(--space-1);
+    font-size: var(--font-size-1-5);
+    line-height: var(--line-height-1-5);
+    font-weight: var(--font-weight-bold);
+
+    @media screen and (min-width: 600px) {
+      font-size: var(--font-size-2);
+      line-height: var(--line-height-2);
+    }
+  }
+
+  p {
+    margin: 0;
+    margin-block-end: var(--space-3);
+    font-size: var(--font-size-1);
+    line-height: var(--line-height-1-5);
+  }
 }
