--- a/src/assets/stylesheets/EducationLandingPage.scss
+++ b/src/assets/stylesheets/EducationLandingPage.scss
@@ -12,13 +12,13 @@
   align-self: stretch;
   background-color: var(--editor-color-layer-3);
 
-  .logo-lm__title {
+  .education-logo__title {
     @include md-width {
       @include font-size-2(regular);
     }
   }
 
-  .logo-lm-__subtitle {
+  .education-logo-__subtitle {
     @include md-width {
       @include font-size-2(regular);
     }
