--- a/src/assets/stylesheets/ClassPage.scss
+++ b/src/assets/stylesheets/ClassPage.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: row;
     // flex: 1 0 0;
-    margin-block: auto;
+    // margin-block: auto;
     justify-content: space-between;
   }
 
@@ -46,7 +46,7 @@
 }
 
 .class__button {
-  border: 3px solid var(--editor-color-theme);
+  border: 2px solid var(--editor-color-theme);
   width: fit-content;
   border-radius: 8px;
 
