--- a/src/assets/stylesheets/MembersPageHeader.scss
+++ b/src/assets/stylesheets/MembersPageHeader.scss
@@ -7,9 +7,6 @@
   @media screen and (min-width: 1200px) {
     display: flex;
     flex-direction: row;
-  }
-
-  @media screen and (min-width: 1200px) {
     align-items: center;
     justify-content: space-between;
   }
@@ -31,7 +28,7 @@
 }
 
 .members-page-header__buttons {
-  @include font-size-1-25(regular);    
+  font-size: var(--font-size-1-5);
   gap: var(--space-2);
   display: flex;
   flex-direction: column;
