adding view only banner

--- a/src/assets/stylesheets/EditorInput.scss
+++ b/src/assets/stylesheets/EditorInput.scss
@@ -1,6 +1,19 @@
+@use "./rpf_design_system/colours" as *;
+@use './rpf_design_system/font-weight' as *;
+
 .editor-input {
   display: flex;
   flex-direction: column;
   block-size: 100%;
   inline-size: 100%;
+}
+
+.editor-input__view-only-banner {
+  font-weight: $font-weight-bold;
+  padding: var(--space-0-5) var(--space-1);
+  border-bottom: 1px solid var(--editor-color-outline);
+}
+
+.--light .editor-input__view-only-banner {
+  background-color: $rpf-grey-100;
 }
