--- a/src/assets/stylesheets/Tabs.scss
+++ b/src/assets/stylesheets/Tabs.scss
@@ -112,6 +112,7 @@
     &__tab-panel--selected {
       flex: 1;
       display: flex;
+      flex-direction: column;
       overflow-y: auto;
     }
   }
