view only banner dark mode

--- a/src/assets/stylesheets/EditorInput.scss
+++ b/src/assets/stylesheets/EditorInput.scss
@@ -17,3 +17,8 @@
 .--light .editor-input__view-only-banner {
   background-color: $rpf-grey-100;
 }
+
+.--dark .editor-input__view-only-banner {
+  background-color: $rpf-grey-300;
+  color: $rpf-black;
+}
