--- a/src/assets/stylesheets/InternalStyles.scss
+++ b/src/assets/stylesheets/InternalStyles.scss
@@ -40,6 +40,7 @@
 @use "./SaveStatus" as *;
 @use "./ContextMenu" as *;
 @use "./FilePanel" as *; // needs to be below Button
+@use "./EmbeddedViewer" as *;
 
 :host {
   font-size: 1.6rem;
