Pyodide Migration Feature Branch (#1027)
Feature branch for the dynamic switching of skulpt/pyodide environments

---------

Co-authored-by: create-issue-branch[bot] <53036503+create-issue-branch[bot]@users.noreply.github.com>
Co-authored-by: Lois Wells <lois.wells@raspberrypi.org>
Co-authored-by: Lois Wells <88904316+loiswells97@users.noreply.github.com>

--- a/src/assets/stylesheets/ErrorMessage.scss
+++ b/src/assets/stylesheets/ErrorMessage.scss
@@ -5,6 +5,7 @@
   color: #7e0305;
   background-color: #fde2e1;
   padding: $space-0-75 $space-1-25;
+  overflow-y: auto;
 
   &__content {
     padding: 0;
