fix image panel sizing and wrapping

--- a/src/assets/stylesheets/InternalStyles.scss
+++ b/src/assets/stylesheets/InternalStyles.scss
@@ -21,6 +21,7 @@
 @use "./ProjectsPanel" as *;
 @use "./ProjectName" as *;
 @use "./ProjectInfo" as *;
+@use "./ProjectImages" as *;
 @use "./DownloadPanel";
 @use "./SettingsPanel" as *;
 @use "./SelectButtons" as *;
