fix(pythonrunner-active-styles-+-skulpt-visual-state): pr review comments addressed

--- a/src/assets/stylesheets/PythonRunner.scss
+++ b/src/assets/stylesheets/PythonRunner.scss
@@ -55,6 +55,22 @@
   position: relative;
 }
 
+.pyodiderunner {
+  display: none;
+
+  &--active {
+    display: flex;
+  }
+}
+
+.skulptrunner {
+  display: none;
+
+  &--active {
+    display: flex;
+  }
+}
+
 .visual-output {
   flex: 1;
   display: flex;
