--- a/src/assets/stylesheets/Tabs.scss
+++ b/src/assets/stylesheets/Tabs.scss
@@ -72,6 +72,7 @@
         padding-inline-end: 0;
       }
     }
+
     &__tab-close-btn {
       block-size: 100%;
       padding: $space-0-25;
@@ -112,6 +113,7 @@
     &__tab-panel--selected {
       flex: 1;
       display: flex;
+      flex-direction: column;
       overflow-y: auto;
     }
   }
