Instructions syntax highlighting for CEfE (#1190)
closes
https://github.com/RaspberryPiFoundation/digital-editor-issues/issues/418

--- a/src/assets/stylesheets/Instructions.scss
+++ b/src/assets/stylesheets/Instructions.scss
@@ -40,6 +40,13 @@
     }
   }
 
+  code {
+    color: $rpf-white;
+    background-color: $rpf-grey-700;
+    border-radius: 8px;
+    padding: calc(0.75 * $space-0-125) $space-0-5;
+  }
+
   pre {
     background-color: $rpf-grey-700;
     border: 1px solid $rpf-grey-600;
@@ -47,13 +54,10 @@
     padding: $space-0-5 $space-1;
     overflow: auto;
     margin: $space-1 0;
-  }
 
-  code {
-    color: $rpf-white;
-    background-color: $rpf-grey-700;
-    border-radius: 8px;
-    padding-block: calc(0.75 * $space-0-125);
+    code {
+      padding-inline: 0;
+    }
   }
 
   .c-project-code {
@@ -107,6 +111,27 @@
     .number,
     .boolean,
     .function {
+      color: $rpf-syntax-1;
+    }
+    .keyword {
+      color: $rpf-syntax-4;
+    }
+    .string,
+    .char {
+      color: $rpf-syntax-2;
+    }
+    .comment {
+      color: $rpf-syntax-3;
+    }
+
+    .keyword-print {
+      color: $rpf-white;
+    }
+  }
+
+  .language-javascript {
+    .number,
+    .boolean {
       color: $rpf-syntax-1;
     }
     .keyword {
