fix: add global hyphenation
- Will hyphenate words when browser support the language (https://developer.mozilla.org/en-US/docs/Web/CSS/hyphens)
- Added exceptions for things that should not be hyphenated (https://meyerweb.com/eric/thoughts/2012/12/17/where-to-avoid-css-hyphenation/)

--- a/src/assets/stylesheets/InternalStyles.scss
+++ b/src/assets/stylesheets/InternalStyles.scss
@@ -58,9 +58,26 @@
   display: flex;
   flex-flow: column;
   block-size: 100%;
+  hyphens: auto;
 
   .proj {
     min-block-size: 100%;
+  }
+
+  code,
+  var,
+  kbd,
+  samp,
+  tt,
+  dir,
+  listing,
+  plaintext,
+  xmp,
+  abbr,
+  acronym,
+  blockquote,
+  q {
+    hyphens: none;
   }
 }
 
