--- a/src/assets/stylesheets/Sidebar.scss
+++ b/src/assets/stylesheets/Sidebar.scss
@@ -101,6 +101,7 @@
   display: flex;
   flex-direction: column;
   padding: $space-1;
+  padding-block-end: 0;
   border-radius: 0 8px 8px 0;
   inline-size: inherit;
   background: var(--sidebar-panel-background);
@@ -128,7 +129,6 @@
   padding: $space-1 0;
   overflow-y: scroll;
   scrollbar-width: thin;
-  overflow: auto;
 }
 
 .sidebar__panel-footer {
