--- a/src/assets/stylesheets/MobileProjectBar.scss
+++ b/src/assets/stylesheets/MobileProjectBar.scss
@@ -8,7 +8,8 @@
   border-block-start: 1px solid $rpf-grey-150;
   display: flex;
   justify-content: space-between;
-  padding: 0 $space-0-5;
+  padding: $space-0-5;
+  gap: var(--space-1);
 }
 
 .mobile-project-bar__name {
