Fix status bar overflow on mobile (#1217)
closes
https://github.com/RaspberryPiFoundation/digital-editor-issues/issues/688

<img width="447" alt="image"
src="https://github.com/user-attachments/assets/9d7f821a-0a01-4fb6-90b4-785f39308400"
/>

<img width="447" alt="image"
src="https://github.com/user-attachments/assets/9f01c710-9399-4291-967e-0247fa7fccf2"
/>

---------

Co-authored-by: Max Elkins <max.elkins@raspberrypi.org>

--- a/src/assets/stylesheets/MobileProjectBar.scss
+++ b/src/assets/stylesheets/MobileProjectBar.scss
@@ -7,9 +7,9 @@
   background-color: $rpf-white;
   border-block-start: 1px solid $rpf-grey-150;
   display: flex;
-  block-size: 25px;
   justify-content: space-between;
-  padding: 0 $space-0-5;
+  padding: $space-0-5;
+  gap: var(--space-1);
 }
 
 .mobile-project-bar__name {
