--- a/src/assets/stylesheets/SaveStatus.scss
+++ b/src/assets/stylesheets/SaveStatus.scss
@@ -8,14 +8,25 @@
   gap: $space-0-25;
   justify-content: flex-end;
   margin-block: 0;
-  padding-inline: $space-1;
+  padding-inline: var(--space-1);
 }
 
 .save-status--mobile {
   margin: unset;
+  padding-inline: 0;
 
   .save-status__text {
-    @include font-size-1(regular);
+    @include font-size-0-75(regular);
+  }
+
+  .save-status__icon {
+    inline-size: 16px;
+    block-size: 16px;
+
+    svg {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
