fix: save status text to close to icon

--- a/src/assets/stylesheets/SaveStatus.scss
+++ b/src/assets/stylesheets/SaveStatus.scss
@@ -5,7 +5,7 @@
 .save-status {
   align-items: center;
   display: flex;
-  gap: $space-0-25;
+  gap: var(--space-1);
   justify-content: flex-end;
   margin-block: 0;
   padding-inline: var(--space-2);
@@ -14,6 +14,7 @@
 .save-status--mobile {
   margin: unset;
   padding-inline: 0;
+  gap: var(--space-0-5);
 
   .save-status__text {
     @include font-size-0-75(regular);
